<resources>
    <string name="app_name">Event</string>
    <string name="newEvent">New Event</string>
    <string name="title">Title: </string>
    <string name="date">Date: </string>
    <string name="location">Location: </string>
    <string name="descrip">Description: </string>
    <string name="addEvent">Add Event</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="back">Back</string>
    <string name="dateFormat">(yyyy-MM-DD)</string>
</resources>
